updated subscribe and contact section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
                             <li><a href="#HOME">HOME</a> </li>
                             <li><a href="#ABOUT">ABOUT </a> </li>
                             <li><a href="#FEATURES">FEATURES</a></li>
-                            <li><a href="#DOWNLOAD">DOWNLOAD </a> </li>
                             <li><a href="#CONTACT">CONTACT </a> </li>
                         </ul>
                     </div>
@@ -143,7 +142,7 @@
                     <!-- ABOUT US SECTION TITLE-->
                     <div class="section_title">
                         <h2>About Us</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                        <p>Our vision is to improve car driver's experience in San Francisco to read and understand all the parking regulations. We Believe by taking these steps, we could actually lower the rate of drivers who got parking tickets.</p>
                     </div>
                 </div>
 
@@ -171,8 +170,8 @@
                                 <!-- ICON -->
                                 <div><i class="pe-7s-timer"></i></div>
                                 <!-- HEADING DESCRIPTION -->
-                                <h3>Lorem ipsum dolor sit amet</h3>
-                                <p>Cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit.</p>
+                                <h3>Easy and Effective</h3>
+                                <p>Avoid parking tickets, by having the best experience to read the parking signs in San Francisco</p>
                             </div>
                             <!-- END SINGLE DESC -->
 
@@ -182,8 +181,8 @@
                                 <!-- ICON -->
                                 <div><i class="pe-7s-target"></i></div>
                                 <!-- HEADING DESCRIPTION -->
-                                <h3>Lorem ipsum dolor sit amet</h3>
-                                <p>Cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit.</p>
+                                <h3>Driver Assisted UI</h3>
+                                <p>Drive safely and always get updated with the nearest parking spots. With our algorithm, understand the parking rules in a better experience.</p>
                             </div>
                             <!-- END SINGLE DESC -->
 
@@ -193,8 +192,8 @@
                                 <!-- ICON -->
                                 <div><i class="pe-7s-stopwatch"></i></div>
                                 <!-- HEADING DESCRIPTION -->
-                                <h3>Lorem ipsum dolor sit amet</h3>
-                                <p>Cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit.</p>
+                                <h3>Timer Mode</h3>
+                                <p>Set the timer in order to receive notifications on when to move out your car before a certain parking time limit has been reached. </p>
                             </div>
                             <!-- END SINGLE DESC -->
 
@@ -203,34 +202,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="video_area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 wow fadeInLeftBig">
-                    <!-- VIDEO LEFT TITLE -->
-                        <div class="video_title">
-                            <h2>Best App <br>in the market</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
-                        </div>
-                        <div class="video-button">
-                            <!-- BUTTON -->
-                            <a class="btn btn-primary btn-video" href="#FEATURES" role="button">Features</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 wow fadeInRightBig">
-                         <!-- VIDEO -->
-                        <div class="video">
-                            <iframe src="https://player.vimeo.com/video/88209254?title=0&amp;byline=0&amp;portrait=0&amp;color=cc0000" width="560" height="315"></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End About Us -->
-
-
 
 
  <!-- =========================
@@ -260,9 +231,9 @@
                                                 <img src="images/client_1.png" alt="">
                                                 <div class="testimonial_caption">
                                                    <!-- DESCRIPTION -->
-                                                    <h2>Dan Harmon</h2>
-                                                    <h4><span>SR. UI Designer,</span> Dcrazed</h4>
-                                                    <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.”</p>
+                                                    <h2>John Smith</h2>
+                                                    <h4><span>SR. iOS Developer,</span> Twitter</h4>
+                                                    <p>“Beautiful design and very interactive User Experience which making it very convinient for drivers"</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -276,9 +247,9 @@
                                                 <img src="images/client_2.png" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
-                                                    <h2>Allie Kingsley</h2>
-                                                    <h4><span>SR. Content Strategist,</span> Designscrazed</h4>
-                                                    <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.”</p>
+                                                    <h2>Alicia Monterey</h2>
+                                                    <h4><span>UX Designer,</span> Github</h4>
+                                                    <p>“This is revolutionary. Every single drivers in SF will really need this app in their phone. Great job by done team PARKR!"</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -289,12 +260,12 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <!-- IMAGE -->
-                                                <img src="images/client_3.png" alt="">
+                                                <img src="images/bukacakClient.png" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
-                                                    <h2>Joel Mchale</h2>
-                                                    <h4><span>SR. Developer,</span> Treehouse</h4>
-                                                    <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.”</p>
+                                                    <h2>Buka Cakrawala</h2>
+                                                    <h4><span>CEO,</span> Savager Inc</h4>
+                                                    <p>“This is something next level!”</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -441,132 +412,6 @@
     </div>
 
     <!-- END CALL TO ACTION -->
-
-
-<!-- =========================
-     Start FUN FACTS
-============================== -->
-
-
-    <section class="fun_facts parallax">
-        <div class="section_overlay">
-            <div class="container wow bounceInLeft" data-wow-duration="1s">
-                <div class="row text-center">
-                    <div class="col-md-3">
-                        <div class="single_fun_facts">
-                            <i class="pe-7s-cloud-download"></i>
-                            <h2><span  class="counter_num">699</span> <span>+</span></h2>
-                            <p>Downloads</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="single_fun_facts">
-                            <i class="pe-7s-look"></i>
-                            <h2><span  class="counter_num">1999</span> <span>+</span></h2>
-                            <p>Likes</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="single_fun_facts">
-                            <i class="pe-7s-comment"></i>
-                            <h2><span  class="counter_num">199</span> <span>+</span></h2>
-                            <p>Feedbacks</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="single_fun_facts">
-                            <i class="pe-7s-cup"></i>
-                            <h2><span  class="counter_num">10</span> <span>+</span></h2>
-                            <p>Awards</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- END FUN FACTS -->
-
-
-
-
-<!-- =========================
-     START DOWNLOAD NOW
-============================== -->
-    <section class="download page" id="DOWNLOAD">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <!-- DOWNLOAD NOW SECTION TITLE -->
-                    <div class="section_title">
-                        <h2>download now</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-                    </div>
-                    <!--END DOWNLOAD NOW SECTION TITLE -->
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <div class="download_screen text-center wow fadeInUp" data-wow-duration="1s">
-                        <img src="images/download_screen.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="available_store">
-            <div class="container  wow bounceInRight" data-wow-duration="1s">
-                <div class="col-md-6">
-                    <div class="available_title">
-                        <h2>Available on</h2>
-                        <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                    </div>
-                </div>
-
-                <!-- DOWNLOADABLE STORE -->
-                <div class="col-md-6">
-                    <div class="row">
-                        <a href="">
-                            <div class="col-md-4 no_padding">
-                                <div class="single_store">
-                                    <i class="fa fa-apple"></i>
-                                    <div class="store_inner">
-                                        <h2>iOS</h2>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                        <div class="col-md-4 no_padding">
-                            <a href="">
-                                <div class="single_store">
-                                    <i class="fa fa-android"></i>
-                                    <div class="store_inner">
-                                        <h2>ANDROID</h2>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-4 no_padding">
-                            <a href="">
-                                <div class="single_store last">
-                                    <i class="fa fa-windows"></i>
-                                    <div class="store_inner">
-                                        <h2>WINDOWS</h2>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <!-- END DOWNLOADABLE STORE -->
-            </div>
-        </div>
-    </section>
-    <!-- END DOWNLOAD -->
-
 <!-- =========================
      START CONTCT FORM AREA
 ============================== -->
@@ -595,7 +440,7 @@
                     <div class="Sucess"></div>
                 <!-- END ERROR AND SUCCESS MESSAGE -->
 
-                <!-- FORM -->
+                
                     <form role="form">
                         <div class="row">
                             <div class="col-md-4">
@@ -615,26 +460,7 @@
                 </div>
             </div>
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 wow bounceInLeft">
-                        <div class="social_icons">
-                            <ul>
-                                <li><a href=""><i class="fa fa-facebook"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-twitter"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-dribbble"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-behance"></i></a>
-                                </li>
-                                <li><a href=""><i class="fa fa-youtube-play"></i></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </section>
     <!-- END CONTACT -->
@@ -654,7 +480,7 @@
                         <!-- Start Subscribe Section Title -->
                         <div class="section_title">
                             <h2>SUBSCRIBE US</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                            <p>Please enter your email address if you would like to hear updates on PARKR app from us.</p>
                         </div>
                         <!-- End Subscribe Section Title -->
                     </div>
@@ -679,7 +505,6 @@
                             <button type="submit" class="btn btn-default subs-btn">Submit</button>
                         </form>
 
-
                     </div>
                 </div>
             </div>
@@ -700,8 +525,6 @@
                 <div class="col-md-6">
                     <div class="copy_right_text">
                     <!-- COPYRIGHT TEXT -->
-                        <p>Copyright &copy; 2016. All Rights Reserved.</p>
-                        <p>A theme by <a href="https://dcrazed.com/">Dcrazed</a></p>
                     </div>
 
                 </div>
