updated screenshots image

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <div class="home_text">
                             <!-- TITLE AND DESC -->
                             <h1>Say Goodbye to parking tickets</h1>
-                            <p>It's time to move outtt!.</p>
+                            <p>It's the best way to read parking signs. No more tickets, no more sadness becase WE PARKR.</p>
 
                             <div class="download-btn">
                             <!-- BUTTON -->
@@ -117,7 +117,7 @@
                     </div>
                     <div class="col-md-3 col-md-offset-1 col-sm-4">
                         <div class="home-iphone">
-                            <img src="images/iPhone_Home.png" alt="">
+                            <img src="images/unparkrhome.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -347,7 +347,7 @@
                     <div class="col-md-4">
                         <div class="feature_iphone">
                             <!-- FEATURE PHONE IMAGE -->
-                            <img class="wow bounceIn" data-wow-duration="1s" src="images/iPhone02.png" alt="">
+                            <img class="wow bounceIn" data-wow-duration="1s" src="images/unparkrhome.png" alt="">
                         </div>
                     </div>
                     <div class="col-md-4 left_no_padding wow fadeInRight" data-wow-duration="1s">
@@ -422,7 +422,7 @@
                     <!-- Start Contact Section Title-->
                     <div class="section_title">
                         <h2>Get in touch</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                        <p>Send us Feedback! We would like to hear your experience using PARKR app for us to improve in the future.</p>
                     </div>
                 </div>
             </div>
@@ -440,7 +440,7 @@
                     <div class="Sucess"></div>
                 <!-- END ERROR AND SUCCESS MESSAGE -->
 
-                
+
                     <form role="form">
                         <div class="row">
                             <div class="col-md-4">
