updated description context

--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <!-- IMAGE -->
-                                                <img src="images/bukacakClient.png" alt="">
+                                                <img src="images/client_3.png" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
-                                                    <h2>Buka Cakrawala</h2>
-                                                    <h4><span>CEO,</span> Savager Inc</h4>
-                                                    <p>“This is something next level!”</p>
+                                                    <h2>Alexis Sandro</h2>
+                                                    <h4><span>Uber Driver</span> Car Driver</h4>
+                                                    <p>“This app really helps alot, it saves me from alot of parking tickets! The design is very simple, making it really easy to uderstand”</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -295,8 +295,6 @@
                     <!-- FEATURES SECTION TITLE -->
                     <div class="section_title wow fadeIn" data-wow-duration="1s">
                         <h2>Features</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-                    </div>
                     <!-- END FEATURES SECTION TITLE -->
                 </div>
             </div>
@@ -306,19 +304,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 right_no_padding wow fadeInLeft" data-wow-duration="1s">
-                        <!-- FEATURE -->
-
-                        <div class="left_single_feature">
-                            <!-- ICON -->
-                            <div><span class="pe-7s-like"></span></div>
-
-                            <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3>Creative Design<span>/</span></h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-
-                        <!-- END SINGLE FEATURE -->
-
 
                         <!-- FEATURE -->
                         <div class="left_single_feature">
@@ -326,8 +311,8 @@
                             <div><span class="pe-7s-science"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3>Modern Look<span>/</span></h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
+                            <h3>Core Location<span>/</span></h3>
+                            <p>It tracks down the location wherever you go, and whenever you move.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -338,8 +323,11 @@
                             <div><span class="pe-7s-look"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3>Minimal Layout<span>/</span></h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
+                            <h3>Endpoint Info<span>/</span></h3>
+                            <p>
+                                In PARKR we only focus to display only the most necessary information in the parking rulesets, which is the parking time limit. By taking this step,
+                                we could improve the experience for drivers to understand the rules for a short time.
+                            </p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -352,16 +340,6 @@
                     </div>
                     <div class="col-md-4 left_no_padding wow fadeInRight" data-wow-duration="1s">
 
-                        <!-- FEATURE -->
-                        <div class="right_single_feature">
-                            <!-- ICON -->
-                            <div><span class="pe-7s-monitor"></span></div>
-
-                            <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Retina ready</h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
-                        </div>
-                        <!-- END SINGLE FEATURE -->
 
 
                         <!-- FEATURE -->
@@ -370,8 +348,8 @@
                             <div><span class="pe-7s-phone"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Responsive Ready</h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
+                            <h3><span>/</span>Easy to navigate</h3>
+                            <p>With Driver-assisted UI, car drivers will always get updated with the nearest parking regulations.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
 
@@ -382,8 +360,8 @@
                             <div><span class="pe-7s-gleam"></span></div>
 
                             <!-- FEATURE HEADING AND DESCRIPTION -->
-                            <h3><span>/</span>Clean Code</h3>
-                            <p>Lorem ipsum dolor, consectetur sed do adipisicing elit, sed do eiusmod tempor incididunt</p>
+                            <h3><span>/</span>Timer Flexibility</h3>
+                            <p>Set a notification timer in order to receive a notification when to move out your car, by pressing the park here button.</p>
                         </div>
                         <!-- END SINGLE FEATURE -->
                     </div>
@@ -402,7 +380,7 @@
         <div class="container">
             <div class="row wow fadeInLeftBig" data-wow-duration="1s">
                 <div class="col-md-9">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et olore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                    <p>Always drive safe and avoid parking tickets with PARKR</p>
                 </div>
                 <div class="col-md-3">
                     <a class="btn btn-primary btn-action" href="#" role="button">Download Now</a>
