minor change on team pictures

--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
                             <ol class="carousel-indicators">
                                 <li data-target="#carousel-example-caption-testimonial" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel-example-caption-testimonial" data-slide-to="1"></li>
-                                <li data-target="#carousel-example-caption-testimonial" data-slide-to="2"></li>
                             </ol>
 
                             <!-- Wrapper for slides -->
@@ -228,12 +227,12 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                 <!-- IMAGE -->
-                                                <img src="images/client_1.png" alt="">
+                                                <img src="images/tassos_pict.png" alt="">
                                                 <div class="testimonial_caption">
                                                    <!-- DESCRIPTION -->
-                                                    <h2>John Smith</h2>
-                                                    <h4><span>SR. iOS Developer,</span> Twitter</h4>
-                                                    <p>“Beautiful design and very interactive User Experience which making it very convinient for drivers"</p>
+                                                    <h2>Tassos Lambrou</h2>
+                                                    <h4><span>CEO</span> PARKR</h4>
+                                                    <p>Responsible with Trigonometry Algorithm and Backend</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -244,33 +243,18 @@
                                         <div class="row">
                                             <div class="col-md-12 text-center">
                                                  <!-- IMAGE -->
-                                                <img src="images/client_2.png" alt="">
+                                                <img src="images/bukacakClient.png" alt="">
                                                 <div class="testimonial_caption">
                                                 <!-- DESCRIPTION -->
-                                                    <h2>Alicia Monterey</h2>
-                                                    <h4><span>UX Designer,</span> Github</h4>
-                                                    <p>“This is revolutionary. Every single drivers in SF will really need this app in their phone. Great job by done team PARKR!"</p>
+                                                    <h2>Buka Cakrawala</h2>
+                                                    <h4><span>Chief Visionary</span> PARKR</h4>
+                                                    <p>Responsible with UI and UX, API Request and Vision</p>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">
-                                    <div class="container">
-                                        <div class="row">
-                                            <div class="col-md-12 text-center">
-                                                <!-- IMAGE -->
-                                                <img src="images/client_3.png" alt="">
-                                                <div class="testimonial_caption">
-                                                <!-- DESCRIPTION -->
-                                                    <h2>Alexis Sandro</h2>
-                                                    <h4><span>Uber Driver</span> Car Driver</h4>
-                                                    <p>“This app really helps alot, it saves me from alot of parking tickets! The design is very simple, making it really easy to uderstand”</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
                     </div>
