Changes to download link, profiles, and mail-me

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
               <div class="download-btn">
                 <!-- BUTTON -->
-                <a class="btn home-btn wow fadeInLeft" href="#DOWNLOAD">Download Now!</a>
+                <a class="btn home-btn wow fadeInLeft" href="https://itunes.apple.com/us/app/parkr-sf/id1229624322?ls=1&mt=8">Download Now</a>
                 <a class="tuor btn wow fadeInRight" href="#ABOUT">Take a tour <i class="fa fa-angle-down"></i></a>
               </div>
             </div>
@@ -234,7 +234,7 @@
                             <!-- DESCRIPTION -->
                             <h2>Tassos Lambrou</h2>
                             <h4><span>CEO/iOS and Full-stack Engineer</span> PARKR</h4>
-                            <p>Primary vision, product management and UI</p>
+                            <p>Primary vision, product management, and UI/UX</p>
                           </div>
                         </div>
                       </div>
@@ -250,7 +250,7 @@
                             <!-- DESCRIPTION -->
                             <h2>Alex Reilly</h2>
                             <h4><span>Co-founder/Backend Artisan</span> PARKR</h4>
-                            <p>Responsible for server architecture and data management</p>
+                            <p>Backend server architecture and data management</p>
                           </div>
                         </div>
                       </div>
@@ -266,7 +266,7 @@
                             <!-- DESCRIPTION -->
                             <h2>Buka Cakrawala</h2>
                             <h4><span>Co-founder/iOS Engineer</span> PARKR</h4>
-                            <p>Responsible for UI and UX, API Request and Vision</p>
+                            <p>UI/UX, timer mode, push notifications</p>
                           </div>
                         </div>
                       </div>
